k8s/01-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: momotaro-v2-service
  namespace: default
spec:
  selector:
    app: momotaro-v2
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
