k8s/01-deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: momotaro-v2-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: takeout.momotarosushi.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: momotaro-v2-service
                port:
                  number: 80
    - host: dinein.momotarosushi.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: momotaro-v2-service
                port:
                  number: 80
  tls:
    - hosts:
        - takeout.momotarosushi.ca
        - dinein.momotarosushi.ca
